--- a/SimpleWeather.Shared/Resources/Strings/Resources.sk.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.sk.resx
@@ -593,6 +593,9 @@
   <data name="FeebackButton.Content" xml:space="preserve">
     <value>Spätná väzba </value>
   </data>
+  <data name="prompt_update_title" xml:space="preserve">
+    <value>Aktualizovať SimpleWeather</value>
+  </data>
   <data name="prompt_update_available" xml:space="preserve">
     <value>Je dostupná aktualizácia. Ťuknutím inštalujte</value>
   </data>
