--- a/SimpleWeather.Shared/Resources/Strings/Resources.nl.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.nl.resx
@@ -593,6 +593,9 @@
   <data name="FeebackButton.Content" xml:space="preserve">
     <value>Terugkoppeling</value>
   </data>
+  <data name="prompt_update_title" xml:space="preserve">
+    <value>Update SimpleWeather</value>
+  </data>
   <data name="prompt_update_available" xml:space="preserve">
     <value>Update beschikbaar. Klik om te installeren</value>
   </data>
