Weather-API: add initial support for Apple WeatherKit

--- a/SimpleWeather.Shared/Resources/Strings/ConfigiOS.resx
+++ b/SimpleWeather.Shared/Resources/Strings/ConfigiOS.resx
@@ -124,6 +124,13 @@
         "newWeatherSource": ""
 }</value>
   </data>
+  <data name="apple" xml:space="preserve">
+    <value>{
+        "enabled": true,
+        "locSource": "apple",
+        "newWeatherSource": ""
+}</value>
+  </data>
   <data name="default_weather_provider" xml:space="preserve">
     <value>weatherapi</value>
   </data>
