--- a/SimpleWeather.Shared/Resources/Strings/Resources.nl.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.nl.resx
@@ -777,4 +777,10 @@ Fuzzy</comment>
   <data name="pref_title_termsofservice" xml:space="preserve">
     <value>Servicevoorwaarden</value>
   </data>
+  <data name="api_apple_weather" xml:space="preserve">
+    <value>Apple Weather</value>
+  </data>
+  <data name="copyright_apple_weather" xml:space="preserve">
+    <value>Apple Weather and (Apple) Weather are trademarks of Apple Inc.</value>
+  </data>
 </root>
