--- a/SimpleWeather.Shared/Resources/Strings/Resources.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Resources.resx
@@ -776,4 +776,10 @@
   <data name="pref_title_termsofservice" xml:space="preserve">
     <value>Terms of Service</value>
   </data>
+  <data name="api_apple_weather" xml:space="preserve">
+    <value>Apple Weather</value>
+  </data>
+  <data name="copyright_apple_weather" xml:space="preserve">
+    <value>Apple Weather and (Apple) Weather are trademarks of Apple Inc.</value>
+  </data>
 </root>
