--- a/SimpleWeather.Shared/Resources/Strings/ConfigiOS.resx
+++ b/SimpleWeather.Shared/Resources/Strings/ConfigiOS.resx
@@ -134,6 +134,9 @@
   <data name="default_weather_provider" xml:space="preserve">
     <value>weatherapi</value>
   </data>
+  <data name="google" xml:space="preserve">
+    <value>{"enabled":true,"locSource":"apple","newWeatherSource":""}</value>
+  </data>
   <data name="Here" xml:space="preserve">
     <value>{
         "enabled": true,
@@ -163,6 +166,13 @@
 }</value>
   </data>
   <data name="OpenWeather" xml:space="preserve">
+    <value>{
+        "enabled": true,
+        "locSource": "Bing",
+        "newWeatherSource": ""
+}</value>
+  </data>
+  <data name="openweather_onecall" xml:space="preserve">
     <value>{
         "enabled": true,
         "locSource": "Bing",
