weather-api: add GooglePollenProvider

--- a/SimpleWeather.Shared/Resources/Strings/Config.resx
+++ b/SimpleWeather.Shared/Resources/Strings/Config.resx
@@ -135,7 +135,7 @@
     <value>weatherapi</value>
   </data>
   <data name="google" xml:space="preserve">
-    <value>{"enabled":true,"locSource":"Bing","newWeatherSource":""}</value>
+    <value>{"enabled":false,"locSource":"Bing","newWeatherSource":""}</value>
   </data>
   <data name="Here" xml:space="preserve">
     <value>{
